#Feature add inverted text colour and fix spacing.

--- a/portfolio/src/main/resources/static/styles/navbar.css
+++ b/portfolio/src/main/resources/static/styles/navbar.css
@@ -16,7 +16,7 @@
     padding: 0;
     overflow: hidden;
     background-color: var(--primary-highlight);
-    color: var(--text-surface);
+    color: var(--text-surface-inverse);
     list-style-type: none;
 }
 
@@ -68,6 +68,7 @@
 
 .header__dropdown--content a:hover {
     background-color: var(--surface-highlight);
+    color: var(--text-surface);
     text-decoration: none;
 }
 
@@ -153,12 +154,12 @@
 
 .site-navigation__link.active {
     background-color: var(--primary-highlight); /* Accent Colour */
-    color: var(--background) !important;
+    color: var(--text-surface-inverse) !important;
 }
 
 .site-navigation__link:hover {
     background-color: var(--primary-highlight); /* Accent Colour */
-    color: var(--background) !important;
+    color: var(--text-surface-inverse) !important;
     text-decoration: none;
 }
 
@@ -208,12 +209,12 @@
 
 #projects-button.active {
     background-color: var(--primary-highlight);
-    color: var(--background) !important;
+    color: var(--text-surface-inverse) !important;
 }
 
 #projects-button:hover {
     background-color: var(--primary-highlight);
-    color: var(--background) !important;
+    color: var(--text-surface-inverse) !important;
     text-decoration: none;
 }
 
